crates/editor-codec-macros/tests/compile_fail/tail_with_default.stderr
error: UnknownTail field cannot have durable attributes
 --> tests/compile_fail/tail_with_default.rs:6:12
  |
6 | pub struct S {
  |            ^
